make even more consistent with ctfp-pdf

--- a/src/main/tut/3.10-ends-and-coends.md
+++ b/src/main/tut/3.10-ends-and-coends.md
@@ -123,7 +123,7 @@ lambdaP :: Profunctor p => DiaProd p -> ProdP p
 lambdaP (DiaProd paa) = lambda paa
 
 rhoP :: Profunctor p => DiaProd p -> ProdP p
-rhoP (DiaProd paa) = rho paa
+rhoP (DiaProd pbb) = rho pbb
 ```
 ```tut:silent
 def lambdaP[P[_, _]](P: Profunctor[P])
