--- a/src/main/tut/3.6-monads-categorically.md
+++ b/src/main/tut/3.6-monads-categorically.md
@@ -141,12 +141,12 @@ def rho[A]: ((A, Unit)) => A = {
 ```
 ................
 ```Haskell
-mu . bimap id eta = lambda
-mu . bimap eta id = rho
+mu . bimap id eta = rho
+mu . bimap eta id = lambda
 ```
 ```scala
-mu.compose(bimap(eta)(identity[M])) == lambda
 mu.compose(bimap(identity[M])(eta)) == rho
+mu.compose(bimap(eta)(identity[M])) == lambda
 ```
 ................
 ```Haskell
